clusters/home/apps/ollama/ollama/configs/ollama-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-ingressroute
  namespace: ollama
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://ollama.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Ollama
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: ollama # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Ollama
    #gethomepage.dev/widget.type: "ollama"
    #gethomepage.dev/widget.url: "https://ollama.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ollama.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: ollama-api
      port: 11434
  tls:
    secretName: ollama-certificate-secret
